--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Standout</title>
+<title>Ash</title>
 <meta name="description" content="">
 <meta name="author" content="">
 
@@ -45,7 +45,7 @@
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-      <a class="navbar-brand page-scroll" href="#page-top">Standout</a> </div>
+      <a class="navbar-brand page-scroll" href="#page-top">Ash</a> </div>
     
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -67,10 +67,10 @@
     <div class="overlay">
       <div class="container">
         <div class="row">
-          <div class="intro-text"> <span>Welcome to</span>
-            <h1>Standout</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipiscing. <br>
-              Duis sed dapibus leo nec ornare diam.</p>
+          <div class="intro-text"> <span>Welcome to my arena!</span>
+            <h1>Ashirbad Sahu</h1>
+            <p>Myself a Computer Science Engineer.<br>
+              Technically sound. Sharp at mind. Soft at heart.</p>
             <a href="#about" class="btn btn-custom btn-lg page-scroll">Learn More</a> </div>
         </div>
       </div>
@@ -303,15 +303,15 @@
       <div class="col-md-8 col-md-offset-2">
         <div id="testimonial" class="owl-carousel owl-theme">
           <div class="item"> <img src="img/clients/01.jpg" alt=""/>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at duis sed dapibus leo nec ornare diam.</p>
+            <p>Published 8 research papers, working on 2 more and a passionate MUN-er and public speaker, Computer Science is my food for thought, my life. Tech is what I am known for, each gadget and it's working interests me.</p>
             <p><strong>John DOE</strong>, CEO, Company.</p>
           </div>
           <div class="item"> <img src="img/clients/02.jpg" alt=""/>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at duis sed dapibus leo nec ornare diam.</p>
+            <p>Time to Focus! and Gear Up! CS Engineering is about to show your actual value within a year !!!</p>
             <p><strong>Jenny DOE</strong>, CEO, Company.</p>
           </div>
           <div class="item"> <img src="img/clients/03.jpg" alt=""/>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at duis sed dapibus leo nec ornare diam.</p>
+            <p>Placed in two companies, Volante.Inc and MuSigma, looking for more, Aspirations always high! | Thats my motto.</p>
             <p><strong>John DOE</strong>, CEO, Company.</p>
           </div>
         </div>
@@ -325,7 +325,7 @@
     <div class="section-title center">
       <h2>Get In Touch</h2>
       <hr>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit duis sed dapibus leonec.</p>
+      <p>Lets connect. Drop me a mail.</p>
     </div>
     <div class="col-md-8 col-md-offset-2">
       <form name="sentMessage" id="contactForm" novalidate>
