--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#about" class="page-scroll">About</a></li>
         <li><a href="#services" class="page-scroll">Services</a></li>
-        <li><a href="#portfolio" class="page-scroll">Gallery</a></li>
+        <li><a href="#portfolio" class="page-scroll">Achievements And Certificates</a></li>
         <li><a href="#testimonials" class="page-scroll">Testimonials</a></li>
         <li><a href="#contact" class="page-scroll">Contact</a></li>
       </ul>
@@ -67,10 +67,10 @@
     <div class="overlay">
       <div class="container">
         <div class="row">
-          <div class="intro-text"> <span>Welcome to my arena!</span>
-            <h1>Ashirbad Sahu</h1>
-            <p>Myself a Computer Science Engineer.<br>
-              Technically sound. Sharp at mind. Soft at heart.</p>
+          <div class="intro-text"> <span>Welcome to my arena! Am</span>
+            <h1>Ashirbad Sahu.</h1>
+            <p>Computer Science Engineer (B.Tech - CSE).<br>
+              Technically sound | Sharp at mind | Soft at heart.</p>
             <a href="#about" class="btn btn-custom btn-lg page-scroll">Learn More</a> </div>
         </div>
       </div>
